[common] refine
